# desafio_02

./: Album.cpp  Album.h  CMakeLists.txt  Ejemplo Informe de responsabilidades Desafíos Info II.docx  main.cpp  publicidad.cpp  publicidad.h  publicidades.txt  sudo.txt  usuario.cpp  usuario.h
build-untitled-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
dataset_generator/: main.py
desafio_02/: publicidad.cpp  publicidad.h  untitled.pro  usuario.cpp  usuario.h
untitled/: Album.cpp  Album.h  main.cpp  publicidad.cpp  publicidad.h  untitled.pro  usuario.cpp  usuario.h
untitled/users/user1/: favoritas.txt  playlist.txt
users/user1/: favoritas.txt
